--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -18,7 +18,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					This course is meant for students who have completed their 10th std
+					Two-year courses is meant for students who have completed their 10th std
 					board exams. The course will start at their 11th std and will be
 					conducted till their JEE exam.
 				</p>
@@ -217,7 +217,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					The course is specifically designed for those who wish to focus on JEE
+					One-year courses is specifically designed for those who wish to focus on JEE
 					after completing their 11th class exams.
 				</p>
 				<h1>Course Methodology</h1>
@@ -415,7 +415,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					This course is meant for those who are appearing for their 12th class
+					Crash courses is meant for those who are appearing for their 12th class
 					board exams and wish to focus on JEE after the Board exams. These
 					students will be attempting JEE the same year.
 				</p>
@@ -668,7 +668,7 @@
 				<div class="hexBox hexBox2">
 					<h1 class="hexTitle">Two-year course</h1>
 					<p class="hexContent para1JEE">
-						This course is meant for students who have completed their 10th std
+						Two-year course is meant for students who have completed their 10th std
 						board exams. The course will start at their 11th std and will be
 						conducted till their JEE exam.
 					</p>
@@ -682,7 +682,7 @@
 				<div class="hexBox">
 					<h1 class="hexTitle">One-year course</h1>
 					<p class="hexContent para2JEE">
-						The course is specifically designed for those who wish to focus on
+						One-year course is specifically designed for those who wish to focus on
 						JEE after completing their 11th class exams.
 					</p>
 					<button class="neet2btn">Read more</button>
@@ -695,7 +695,7 @@
 				<div class="hexBox hexBox2">
 					<h1 class="hexTitle">Crash course</h1>
 					<p class="hexContent para3JEE">
-						This course is meant for those who are appearing for their 12th
+						Crash course is meant for those who are appearing for their 12th
 						class board exams and wish to focus on JEE after the Board exams.
 						These students will be attempting JEE the same year.
 					</p>
