--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -10,6 +10,7 @@
 			type="image/x-icon"
 		/>
 		<link rel="stylesheet" href="stylesheets/demovideos.css" />
+		
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -53,6 +54,24 @@
 			</div>
 			<% }) %>
 		</div>
+		<section class="app">
+			<div class="apppage">
+				<!-- phone -->
+				<div class="appLeft">
+					<img src="images/aboutus/phonebg.png" class="Messaging" />
+				</div>
+				<img src="images/aboutus/Vector2.png" class="vector3" />
+                <img src="images/aboutus/Vector1.png" class="Vector2" />
+                <img src="images/aboutus/Vector.png" class="vector1" />
+				<div class="appRight">
+					<h2>Login as a <span class="user"><b>GUEST USER</b></span> Watch Our FREE Demo Online classes</h2>
+					<a
+						href="https://play.google.com/store/apps/details?id=com.sixerclass.classicneet&hl=en_IN&gl=US"
+						><img src="images/aboutus/download.jpg"
+					/></a>
+				</div>
+			</div>
+		</section>
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
