--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -96,7 +96,7 @@
         alt=""
       />
       <div class="timelineContent">
-        <div class="timelineIcon">
+        <!-- <div class="timelineIcon">
           <div class="timelineDiv">
             <span
               ><img
@@ -126,7 +126,7 @@
             /></span>
             <span><img src="../images/aboutus/dot2.png" /></span>
           </div>
-        </div>
+        </div> -->
         <div class="timelinePara">
           <% content.forEach(cont => { %>
           <p><%= cont.content %> - <%= cont.year %></p>
