--- a/public/stylesheets/common.css
+++ b/public/stylesheets/common.css
@@ -304,7 +304,7 @@ body.dark footer {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	height: 100%;
+	/* height: 100%; */
 }
 .address-container h1 {
 	text-align: center;
