history func changes

--- a/views/coursesIIT&Medical.ejs
+++ b/views/coursesIIT&Medical.ejs
@@ -238,7 +238,7 @@
 			<div class="hex1 bg1">
 				<img src="../images/courses/iitmed.png" alt="" />
 				<div class="hexBox">
-					<h1 class="hexTitle">STUDENTS</h1>
+					<h1 class="hexTitle">IIT & Medical Foundation Course</h1>
 					<p class="hexContent paraIIT">
 						CLASSIC NEET ACADEMY offers a unique IIT/Medical Foundation program
 						aimed at students of the 6th, 7th, 8th, 9th and 10th classes. This
