--- a/views/home.ejs
+++ b/views/home.ejs
@@ -148,8 +148,8 @@
 						<div class="bottom-drive">
 							<a
 								href="https://drive.google.com/file/d/1AekSeStzaqDFCfLAH372bR1bwTOs7ky2/view?usp=sharing" target="_blank">Download
-								Free Questions Bank for Neet-
-								<span class="latestEdition">Latest edition</span></a>
+								Free Questions Bank for NEET-
+								<span class="latestEdition">Latest Edition</span></a>
 						</div>
 					</section>
 
@@ -157,7 +157,7 @@
 					<div class="neet-2020-toppers">
 
 						<div class="neet-2020-toppers-a">
-							<p>Our Results - Neet Toppers</p>
+							<p>Our Results - NEET Toppers</p>
 							<img src="https://img.icons8.com/plumpy/50/000000/sparkling--v2.png"
 								style="height: 30px; width: 30px;" />
 						</div>
