--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -22,13 +22,14 @@
                   clip-rule="evenodd"
                 /></svg></span>
             <div class="address">
-              1/1, First Floor, PS Square, SKS Hospital Road, Opp. to Ponnuswamy Gounder Kalyana Mandapam, Salem - 4
+              1/1, First Floor, PS Square, SKS Hospital Road, Opp. to Ponnuswamy
+              Gounder Kalyana Mandapam, Salem - 637004
             </div>
           </div>
           <span class="mobspan s1"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
-              class="h-5 w-5 "
+              class="h-5 w-5"
               viewBox="0 0 20 20"
               fill="currentColor"
             >
@@ -37,8 +38,7 @@
               />
             </svg>
             <span class="num">&nbsp; +91-78670 14165</span>
-            </span
-          >
+          </span>
         </div>
         <div class="address-container">
           <h1>Namakkal</h1>
@@ -124,8 +124,8 @@
                   clip-rule="evenodd"
                 /></svg></span>
             <div class="address">
-              First Floor, 7/2,Al-noor complex, palathorom St, Katpadi Rd/New
-              Bye-pass Road, Vellore
+              No: 7/2, First Floor AL- Noor Complex, Palathorom Street, Katpadi
+              Road /New Bye Pass Road, Vellore- 632004
             </div>
           </div>
           <span class="mobspan s4"
@@ -143,7 +143,6 @@
           >
         </div>
       </div>
-     
     </div>
 
     <div class="footer_head">
