--- a/views/admin/aboutus/history.ejs
+++ b/views/admin/aboutus/history.ejs
@@ -18,44 +18,7 @@
 		/>
 	</head>
 	<body>
-		<div class="previewdiv">
-			<div class="interior">
-				<form
-					action="/admin/courses/neet"
-					method="post"
-					class="d-flex justify-content-center align-items-center flex-column"
-					style="width: 100%"
-				>
-					<div class="form-floating">
-						<textarea
-							class="form-control formtextarea1"
-							name="<%#  %>"
-							cols="60"
-							style="height: 155px; resize: none"
-							minlength="10"
-							maxlength="250"
-						></textarea>
-					</div>
-					<div class="d-flex justify-content-end" style="width: 80%">
-						<p class="spanp">
-							Characters left &nbsp;<span class="changablespan1">0</span>/250
-						</p>
-					</div>
-					<%= %>
-					<div>
-						<button
-							type="button"
-							class="btn btn-outline-secondary px-3 mt-5 me-5 closebtn"
-						>
-							Close
-						</button>
-						<button type="submit" class="btn btn-outline-primary mt-5">
-							Submit
-						</button>
-					</div>
-				</form>
-			</div>
-		</div>
+		
 		<%- include('../../layout/adminheader') %>
 		<section class="mainsection">
 			<div class="left"><%- include('../../layout/adminSideBar') %></div>
@@ -110,6 +73,70 @@
 						</div>
 					</form>
 				</div>
+				<!-- preview2 -->
+				<div class="preview2">
+					<h1 class="mb-5 fs-4 fw-bold">Student Details</h1>
+					<form
+					  action="/admin/aboutus/historyupdate"
+					  method="post"
+					  class="d-flex justify-content-center align-items-center flex-column"
+					  style="width: 100%"
+					>
+					  <div class="input-group d-flex flex-nowrap mb-3" style="width: 80%">
+						<span class="input-group-text" id="addon-wrapping">Id</span>
+						<input
+						  type="text"
+						  name="oldname"
+						  class="form-control oldid"
+						  aria-label="Username"
+						  aria-describedby="addon-wrapping"
+						  id=" uploadlink"
+						  placeholder="Student Name"
+						  readonly
+						/>
+					  </div>
+					  <div class="input-group flex-nowrap" style="width: 80%">
+						<span class="input-group-text" id="addon-wrapping">Content</span>
+						<textarea
+							class="form-control formtextarea1 editcontent"
+							name="content"
+							cols="60"
+							style="height: 90px; resize: none"
+							minlength="10"
+							maxlength="250"
+						></textarea>
+					</div>
+					<div class="d-flex justify-content-end" style="width: 80%">
+						<p class="spanp d-flex">
+							Characters left &nbsp;<span class="changablespan1">0</span>/250
+						</p>
+					</div>
+						<div class="input-group flex-nowrap" style="width: 80%">
+							<span class="input-group-text" id="addon-wrapping">Year</span>
+							<input
+								type="number"
+								name="year"
+								class="form-control yearnum edityear"
+								aria-label="year"
+								aria-describedby="addon-wrapping"
+								id="uploadlink"
+								min="2010"
+								required
+							/>
+						</div>
+					  <div>
+						<button
+						  type="button"
+						  class="btn btn-outline-secondary px-3 mt-5 me-5 backbtn2"
+						>
+						  Back
+						</button>
+						<button type="submit" class="btn btn-outline-primary mt-5">
+						  submit
+						</button>
+					  </div>
+					</form>
+				  </div>
 				<form
 					action="/admin/aboutus/history?_method=DELETE"
 					method="post"
@@ -122,6 +149,7 @@
 							<tr>
 								<th scope="col">content</th>
 								<th scope="col">year</th>
+								<th scope="col">Edit</th>
 								<th scope="col">Updates</th>
 							</tr>
 						</thead>
