--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -18,7 +18,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					Repeaters courses is meant for those who have completed their 12th class
+					NEET-Repeaters courses is meant for those who have completed their 12th class
 					board exams and might have already attempted the NEET. They will
 					appear for NEET in the coming year after one year of training focused
 					on NEET.
@@ -255,7 +255,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					Two-year courses is meant for students who have completed their 10th std
+					NEET-Two year courses is meant for students who have completed their 10th std
 					board exams. The course will start at their 11th std and will be
 					conducted till their NEET exam. Course Methodology
 				</p>
@@ -454,7 +454,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					One-year courses is specifically designed for those who wish to focus on
+					NEET-One year courses is specifically designed for those who wish to focus on
 					NEET after completing their 11th class exams.
 				</p>
 				<h1>Course Methodology</h1>
@@ -653,7 +653,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					Crash course is meant for those who are appearing for their 12th class
+					NEET-Crash course is meant for those who are appearing for their 12th class
 					board exams and wish to focus on NEET after the Board exams. These
 					students will be attempting NEET the same year.
 				</p>
@@ -903,9 +903,9 @@
 			<div class="hex1 bg1">
 				<img src="../images/courses/heximg1.png" alt="" />
 				<div class="hexBox">
-					<h1 class="hexTitle">Repeaters</h1>
+					<h1 class="hexTitle">NEET-Repeaters</h1>
 					<p class="hexContent para1neet">
-						Repeaters course is meant for those who have completed their 12th class
+						NEET-Repeaters course is meant for those who have completed their 12th class
 						board exams and might have already attempted the NEET. They will
 						appear for NEET in the coming year after one year of training
 						focused on NEET.
@@ -918,9 +918,9 @@
 			<div class="hex1 hex2 bg2">
 				<img src="../images/courses/heximg11.png" alt="" />
 				<div class="hexBox hexBox2">
-					<h1 class="hexTitle">Two-year course</h1>
+					<h1 class="hexTitle">NEET-Two year course</h1>
 					<p class="hexContent para2neet">
-						Two-year course is meant for students who have completed their 10th std
+						NEET-Two year course is meant for students who have completed their 10th std
 						board exams. The course will start at their 11th std and will be
 						conducted till their NEET exam.
 					</p>
@@ -932,9 +932,9 @@
 			<div class="hex1 bg3">
 				<img src="../images/courses/heximg2.png" alt="" />
 				<div class="hexBox">
-					<h1 class="hexTitle">One-year course</h1>
+					<h1 class="hexTitle">NEET-One year course</h1>
 					<p class="hexContent para3neet">
-						One-year course is specifically designed for those who wish to focus on
+						NEET-One year course is specifically designed for those who wish to focus on
 						NEET after completing their 11th class exams.
 					</p>
 					<button class="neet3btn">Read more</button>
@@ -945,9 +945,9 @@
 			<div class="hex1 hex2 bg2">
 				<img src="../images/courses/heximg3.png" alt="" />
 				<div class="hexBox hexBox2">
-					<h1 class="hexTitle">Crash course</h1>
+					<h1 class="hexTitle">NEET-Crash course</h1>
 					<p class="hexContent para4neet">
-						Crash course is meant for those who are appearing for their 12th
+						NEET-Crash course is meant for those who are appearing for their 12th
 						class board exams and wish to focus on NEET after the Board exams.
 						These students will be attempting NEET the same year.
 					</p>
