--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -18,7 +18,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					Two-year courses is meant for students who have completed their 10th std
+					JEE-Two year courses is meant for students who have completed their 10th std
 					board exams. The course will start at their 11th std and will be
 					conducted till their JEE exam.
 				</p>
@@ -217,7 +217,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					One-year courses is specifically designed for those who wish to focus on JEE
+					JEE-One year courses is specifically designed for those who wish to focus on JEE
 					after completing their 11th class exams.
 				</p>
 				<h1>Course Methodology</h1>
@@ -415,7 +415,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					Crash courses is meant for those who are appearing for their 12th class
+					JEE-Crash courses is meant for those who are appearing for their 12th class
 					board exams and wish to focus on JEE after the Board exams. These
 					students will be attempting JEE the same year.
 				</p>
@@ -666,9 +666,9 @@
 			<div class="hex1 bg1">
 				<img src="../images/courses/jee1.png" alt="" />
 				<div class="hexBox hexBox2">
-					<h1 class="hexTitle">Two-year course</h1>
+					<h1 class="hexTitle">JEE-Two year course</h1>
 					<p class="hexContent para1JEE">
-						Two-year course is meant for students who have completed their 10th std
+						JEE-Two year course is meant for students who have completed their 10th std
 						board exams. The course will start at their 11th std and will be
 						conducted till their JEE exam.
 					</p>
@@ -680,9 +680,9 @@
 			<div class="hex1 hex2 bg2">
 				<img src="../images/courses/jee2.png" alt="" />
 				<div class="hexBox">
-					<h1 class="hexTitle">One-year course</h1>
+					<h1 class="hexTitle">JEE-One year course</h1>
 					<p class="hexContent para2JEE">
-						One-year course is specifically designed for those who wish to focus on
+						JEE-One year course is specifically designed for those who wish to focus on
 						JEE after completing their 11th class exams.
 					</p>
 					<button class="neet2btn">Read more</button>
@@ -693,9 +693,9 @@
 			<div class="hex1 bg3">
 				<img src="../images/courses/jee3.png" alt="" />
 				<div class="hexBox hexBox2">
-					<h1 class="hexTitle">Crash course</h1>
+					<h1 class="hexTitle">JEE-Crash course</h1>
 					<p class="hexContent para3JEE">
-						Crash course is meant for those who are appearing for their 12th
+						JEE-Crash course is meant for those who are appearing for their 12th
 						class board exams and wish to focus on JEE after the Board exams.
 						These students will be attempting JEE the same year.
 					</p>
