--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -167,7 +167,7 @@
         <a
           target="_blank"
           class="playstore1"
-          href="https://play.google.com/store/apps/details?id=com.sixerclass.classicneet&hl=en_IN&gl=US"
+          href="https://play.google.com/store/apps/details?id=eduapplet.classicneet&hl=en_IN&gl=US"
           ><img
             src="images/aboutus/download.jpg"
             style="width: 8vw; height: 5vh; margin: 0.8rem"
@@ -175,7 +175,7 @@
         <a
           target="_blank"
           class="playstore2"
-          href="https://play.google.com/store/apps/details?id=com.sixerclass.classicneet&hl=en_IN&gl=US"
+          href="https://play.google.com/store/apps/details?id=eduapplet.classicneet&hl=en_IN&gl=US"
           ><img
             style="height: 45px; width: 45px"
             src="https://img.icons8.com/color/48/000000/playstore.png"
