--- a/views/demovideos.ejs
+++ b/views/demovideos.ejs
@@ -66,7 +66,7 @@
 				<div class="appRight">
 					<h2>Login as a <span class="user"><b>GUEST USER</b></span> Watch Our FREE Demo Online classes</h2>
 					<a
-						href="https://play.google.com/store/apps/details?id=com.sixerclass.classicneet&hl=en_IN&gl=US"
+						href="https://play.google.com/store/apps/details?id=eduapplet.classicneet&hl=en_IN&gl=US" target="_blank"
 						><img src="images/aboutus/download.jpg"
 					/></a>
 				</div>
