--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -34,7 +34,7 @@
                 <span>
                     <li class=""><a href="">Courses Neet</a></li>
                     <li class=""><a href="">Courses jee</a></li>
-                    <li class=""><a href="">Courses iit & medical</a></li>
+                    <li class=""><a href="">Courses IIT & medical</a></li>
                 </span>
             </div>
             <div class="AboutUs">
