--- a/views/home.ejs
+++ b/views/home.ejs
@@ -103,7 +103,7 @@
 							</marquee>
 						</div>
 						<div class="div-1">
-							<h1 class="CalanderEvents">CALENDER EVENTS</h1>
+							<h1 class="CalanderEvents">CALENDAR EVENTS</h1>
 							<div class="calenderMain">
 
 								<% calendar.forEach(cal=> { %>
