--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -217,7 +217,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					JEE-One year courses is specifically designed for those who wish to focus on JEE
+					JEE-One year course is specifically designed for those who wish to focus on JEE
 					after completing their 11th class exams.
 				</p>
 				<h1>Course Methodology</h1>
