--- a/views/home.ejs
+++ b/views/home.ejs
@@ -224,7 +224,7 @@
 								<h1 class="counter MBBS_Seats counter-value" 
 								data-count="<%= neetfor.seats %>"
 								>0.</h1>
-								<h3>MBBS <br> Seats <br> through <br> Neet</h3>
+								<h3>MBBS <br> Seats <br> through <br> NEET</h3>
 							</div>
 							<div class="Stat">
 								<h1 class="counter Consecutive counter-value" data-count="<%= neetfor.consecutiveyears %>">0.</h1>
