--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -53,8 +53,7 @@
 									fill-rule="evenodd"
 									d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
 									clip-rule="evenodd"
-								/></svg
-						></span>
+								/></svg></span>
 						<div class="address">
 							84-B/5, Third Floor, S.S Complex (Ramesh Theatre Bus Stop),Trichy
 							Road, Namakkal - 637002
@@ -88,8 +87,7 @@
 									fill-rule="evenodd"
 									d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
 									clip-rule="evenodd"
-								/></svg
-						></span>
+								/></svg></span>
 						<div class="address">
 							5-A1, Narasimma Achari Street, Town BSNL office Back Side,
 							Dharmapuri - 636701
@@ -123,8 +121,7 @@
 									fill-rule="evenodd"
 									d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
 									clip-rule="evenodd"
-								/></svg
-						></span>
+								/></svg></span>
 						<div class="address">
 							No: 7/2, First Floor AL- Noor Complex, Palathorom Street, Katpadi
 							Road /New Bye Pass Road, Vellore- 632004
@@ -183,6 +180,6 @@
 				/></a>
 			</div>
 		</div>
-		<div class="footer-last">&copy; Copyright Classic Neet Academy 2021</div>
+		<div class="footer-last">&copy; Copyright Classic NEET Academy 2021</div>
 	</div>
 </footer>
