--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -255,7 +255,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					NEET-Two year courses is meant for students who have completed their 10th std
+					NEET-Two year course is meant for students who have completed their 10th std
 					board exams. The course will start at their 11th std and will be
 					conducted till their NEET exam. Course Methodology
 				</p>
@@ -454,7 +454,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					NEET-One year courses is specifically designed for those who wish to focus on
+					NEET-One year course is specifically designed for those who wish to focus on
 					NEET after completing their 11th class exams.
 				</p>
 				<h1>Course Methodology</h1>
