--- a/views/coursesNEET.ejs
+++ b/views/coursesNEET.ejs
@@ -18,7 +18,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					NEET-Repeaters courses is meant for those who have completed their 12th class
+					NEET-Repeater course is meant for those who have completed their 12th class
 					board exams and might have already attempted the NEET. They will
 					appear for NEET in the coming year after one year of training focused
 					on NEET.
@@ -454,7 +454,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					NEET-One year courses is specifically designed for those who wish to focus on
+					NEET-One year course is specifically designed for those who wish to focus on
 					NEET after completing their 11th class exams.
 				</p>
 				<h1>Course Methodology</h1>
@@ -903,9 +903,9 @@
 			<div class="hex1 bg1">
 				<img src="../images/courses/heximg1.png" alt="" />
 				<div class="hexBox">
-					<h1 class="hexTitle">NEET-Repeaters</h1>
+					<h1 class="hexTitle">NEET-Repeater</h1>
 					<p class="hexContent para1neet">
-						NEET-Repeaters course is meant for those who have completed their 12th class
+						NEET-Repeater course is meant for those who have completed their 12th class
 						board exams and might have already attempted the NEET. They will
 						appear for NEET in the coming year after one year of training
 						focused on NEET.
