--- a/views/coursesJEE.ejs
+++ b/views/coursesJEE.ejs
@@ -18,7 +18,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					IIT JEE-Two year courses is meant for students who have completed their 10th std
+					IIT JEE-Two year course is meant for students who have completed their 10th std
 					board exams. The course will start at their 11th std and will be
 					conducted till their JEE exam.
 				</p>
@@ -217,7 +217,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					JEE-One year courses is specifically designed for those who wish to focus on JEE
+					JEE-One year course is specifically designed for those who wish to focus on JEE
 					after completing their 11th class exams.
 				</p>
 				<h1>Course Methodology</h1>
@@ -415,7 +415,7 @@
 						src="https://img.icons8.com/ios-glyphs/40/000000/macos-close.png"
 				/></span>
 				<p class="methContent">
-					IIT JEE-Crash courses is meant for those who are appearing for their 12th class
+					IIT JEE-Crash course is meant for those who are appearing for their 12th class
 					board exams and wish to focus on JEE after the Board exams. These
 					students will be attempting JEE the same year.
 				</p>
