--- a/views/contactus.ejs
+++ b/views/contactus.ejs
@@ -133,7 +133,7 @@
 				</div>
 			</div>
 		</section>
-		<% console.log(success); %> <% if(success && success.length) {%>
+		<% if(success && success.length) {%>
 		<p class="sweetp"><%= success %></p>
 		<% } %> <%- include('./layout/footer') %>
 		<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
