--- a/views/home.ejs
+++ b/views/home.ejs
@@ -73,12 +73,10 @@
 								<marquee class="marqueetext" vspace="30%" scrollamount="5" scrollamount="5" onmousedown='' onmouseup='' onmouseover="this.stop();"
 								onmouseout="this.start();" ontouchstart="this.stop()" ontouchend="this.start()">
 									<p>
-										Admissions open for NEET Repeater 2022 New batch <a href="/contactus">JOIN NOW
-										</a> &nbsp;
-										&ensp; Enroll yourself for NEET Repeater 2022 Scholarship Test
-										<a href="/contactus">JOIN NOW </a>&nbsp; &ensp; Admissions open for NEET/JEE
-										Long-term course (1 year & 2 year)
-										! <a href="/contactus">JOIN NOW</a>
+										<%= marq[0].text %>  <a href="/contactus"><%= marq[0].link %></a>&nbsp;
+										&ensp; <%= marq[1].text %> 
+										<a href="/contactus"><%= marq[1].link %></a>&nbsp; &ensp; <%= marq[2].text %> 
+										<a href="/contactus"><%= marq[2].link %></a>
 									</p>
 								</marquee>
 							</div>
