--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -61,6 +61,13 @@
 							>Students Testimonials</a
 						>
 					</li>
+					<li>
+						<a
+							href="/admin/marquee"
+							class="link-dark rounded ahover"
+							>Marquee Text</a
+						>
+					</li>
 				</ul>
 			</div>
 		</li>
