--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -1662,6 +1662,8 @@ iframe {
 	}
 	.stats {
 		align-items: center;
+		background-size: 100% 100%;
+		background-repeat: no-repeat;
 	}
 	.home {
 		/* min-height: 415px; */
