--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -6,8 +6,8 @@
 	<div class="footer_content">
 		<div class="footer-body">
 			<div class="footerInner">
-				<div class="address-container">
-					<h1>Salem</h1>
+				<div class="address-container salem">
+					<h1>H.O-Salem</h1>
 					<div>
 						<span
 							><svg
@@ -21,7 +21,7 @@
 									d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z"
 									clip-rule="evenodd"
 								/></svg></span>
-						<div class="address">
+						<div class="address" style="font-weight: bolder;">
 							1/1, First Floor, PS Square, SKS Hospital Road, Opp. Ponnusamy Goundar Kalyana Mandapam, Salem- 636004
 						</div>
 					</div>
@@ -36,7 +36,7 @@
 								d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"
 							/>
 						</svg>
-						<span class="num">&nbsp; +91-78670 14165</span>
+						<span class="num" style="font-weight: bolder;">&nbsp; +91-78670 14165</span>
 					</span>
 				</div>
 				<div class="address-container">
