--- a/views/home.ejs
+++ b/views/home.ejs
@@ -147,8 +147,8 @@
 					<section class="drive">
 						<div class="bottom-drive">
 							<a
-								href="https://drive.google.com/file/d/1AekSeStzaqDFCfLAH372bR1bwTOs7ky2/view?usp=sharing" target="_blank">Download
-								Free Questions Bank for NEET-
+								href="https://drive.google.com/drive/folders/1PmazQPJYZUcO2_XeZoLK5Ho6P_jmVv--?usp=sharing" target="_blank">Download
+								Free Questions NEET Bank and Solution
 								<span class="latestEdition">Latest Edition</span></a>
 						</div>
 					</section>
