--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -7,7 +7,7 @@
     <div class="footer-body">
       <div class="footerInner">
         <div class="address-container">
-          <h1>Salem</h1>
+          <h1>H.O-Salem</h1>
           <div>
             <span
               ><svg
