--- a/views/admin/home/marquee.ejs
+++ b/views/admin/home/marquee.ejs
@@ -97,7 +97,7 @@
                 <th scope="col" class="d-flex justify-content-center">
                   Current Text
                 </th>
-                <th scope="col">Regbtn</th>
+                <th scope="col">Button</th>
                 <th scope="col">Edit</th>
               </tr>
             </thead>
