--- a/public/stylesheets/aboutus.css
+++ b/public/stylesheets/aboutus.css
@@ -350,7 +350,6 @@ option:hover {
 /* leader */
 .leaders {
 	width: 100%;
-	height: 270vh;
 	position: relative;
 }
 .leaders h1 {
@@ -712,6 +711,9 @@ option:hover {
 	.timelineContent {
 		width: 90%;
 	}
+	.leaders{
+		height: 240vh;
+	}
 	.leadervideo{
 		margin-top: 4%;
 		margin-bottom: 13%;
@@ -723,9 +725,6 @@ option:hover {
 		
 		flex-direction: column;
         height: fit-content;
-	}
-	.leadervideo{
-		height: fit-content;
 	}
 	.leaders h1 {
 		margin-bottom: 13%;
@@ -767,6 +766,16 @@ option:hover {
 		text-align: center;
 		font-size: 35px;
 		margin-bottom: 3%;
+	}
+}
+@media(max-width:800px){
+	.leaders{
+		height: 250vh;
+	}
+}
+@media(max-width:700px){
+	.leaders{
+		height: 260vh;
 	}
 }
 @media screen and (max-width: 600px) {
@@ -856,6 +865,9 @@ option:hover {
 	width: 70vw;
 	height: 40vh;
 }
+.leaders{
+	height: 270vh;
+}
 }
 
 @media (max-width: 500px) {
@@ -879,11 +891,21 @@ option:hover {
 	.timeline h1 {
 		margin-bottom: 9%;
 	}
+	.leaders{
+		height: 285vh;
+	}
+}
+@media(max-width:450px){
+	.leaders {
+	
+		height: 300vh;
+		
+	}
 }
 @media(max-width:400px){
 	.leaders {
 	
-		height: 320vh;
+		height: 355vh;
 		
 	}
 }
