--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -55,17 +55,17 @@
           <h1>OUR MISSION</h1>
           <p>
             1. To give awareness on competitive exams among the school students
-            and develop science and maths foundation in school going children.
+            and develop science and math foundation in school going children.
           </p>
           <p>
             2. To impart state of art training for the competitive exams such as
-            NEET, JEE etc., to the students and develop competitive spirit to set
+            NEET, JEE etc., to the students and develop competitive spirit to set.
           </p>
         </div>
       </section>
       <!-- leaders -->
       <section class="leaders">
-        <h1>Our Founders</h1>
+        <h1>Our Founder</h1>
         <div class="leaderimg">
           <span class="imageabout">
             <img src="images/aboutus/IMG-20211219-WA0009.jpg" alt="">
