--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -6,7 +6,7 @@
 	<div class="footer_content">
 		<div class="footer-body">
 			<div class="footerInner">
-				<div class="address-container salem">
+				<div class="address-container salem" style="color: #0061FF;">
 					<h1>H.O-Salem</h1>
 					<div>
 						<span
@@ -22,7 +22,7 @@
 									clip-rule="evenodd"
 								/></svg></span>
 						<div class="address" style="font-weight: bolder;">
-							1/1, First Floor, PS Square, SKS Hospital Road, Opp. Ponnusamy Goundar Kalyana Mandapam, Salem- 636004
+							1/1, First Floor, PS Square, SKS Hospital Road, Opp. Ponnusamy Gounder Kalyana Mandapam, Salem- 636004
 						</div>
 					</div>
 					<span class="mobspan s1"
