--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -107,7 +107,7 @@
               based on NEET marks. This is the highest ever result in Salem region for any institute or school.</p>
           </span>
           <span class="leadvideo">
-            <iframe class="iframe1" src="https://www.youtube.com/embed/p7gRiu_wV5s"
+            <iframe class="iframe1" src="https://www.youtube.com/embed/04RAB6z1Aj0"
               title="YouTube video player" frameborder="0"
               allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
