--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -68,7 +68,7 @@
         <h1>Our Founder</h1>
         <div class="leaderimg">
           <span class="imageabout">
-            <img src="images/aboutus/IMG-20211219-WA0009.jpg" alt="">
+            <img src="images/aboutus/TPS.png" alt="">
           </span>
           <span class="content1">
             <p>Dr. T. Periasamy, an edupreneur, was born in a small village in Karur District of Tamil Nadu. He is
