--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -6,7 +6,7 @@
 	<div class="footer_content">
 		<div class="footer-body">
 			<div class="footerInner">
-				<div class="address-container salem" style="color: yellow;">
+				<div class="address-container salem" style="color: purple;">
 					<h1>H.O-Salem</h1>
 					<div>
 						<span
