--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -68,6 +68,13 @@
 							>Marquee Text</a
 						>
 					</li>
+					<li>
+						<a
+							href="/admin/questionbank"
+							class="link-dark rounded ahover"
+							>Questionbank</a
+						>
+					</li>
 				</ul>
 			</div>
 		</li>
