--- a/views/layout/adminSideBar.ejs
+++ b/views/layout/adminSideBar.ejs
@@ -75,6 +75,13 @@
 							>Questionbank</a
 						>
 					</li>
+					<li>
+						<a
+							href="/admin/loadingimg"
+							class="link-dark rounded ahover"
+							>Loading Img</a
+						>
+					</li>
 				</ul>
 			</div>
 		</li>
